css/main.css
/* Typeface stylings */

/* @font-face */
@font-face {
    font-family: "FreightDisp Pro Light";
    font-weight: 400;
    font-display: swap;
    src: url('/assets/fonts/FreightDispProLight-Regular.woff2') format('woff2'),
         url('/assets/fonts/FreightDispProLight-Regular.woff') format('woff');
}
@font-face {
    font-family: "Untitled Sans";
    font-weight: 400;
    font-display: swap;
    src: url('/assets/fonts/UntitledSans-Regular.woff2') format('woff2'),
         url('/assets/fonts/UntitledSans-Regular.woff') format('woff');
}
@font-face {
    font-family: "Untitled Sans";
    font-weight: 700;
    font-display: swap;
    src: url('/assets/fonts/UntitledSans-Medium.woff2') format('woff2'),
         url('/assets/fonts/UntitledSans-Medium.woff') format('woff');
}
@font-face {
    font-family: "FreightDisp Pro Light";
    font-weight: 400;
    font-style: italic;
    font-display: swap;
    src: url('/assets/fonts/FreightDispProLight-Italic.woff2') format('woff2'),
         url('/assets/fonts/FreightDispProLight-Italic.woff') format('woff');
}

/* global type styling */
:root {
    font-family: "Untitled Sans", Helvetica, Arial, sans-serif;
    font-size: clamp(0.75rem, 1.2vw, 0.96rem);
    /* font size variables */
    --font-size-xl: 4rem;
    --font-size-l: 3rem;
    --font-size-m: 2rem;
    --font-size-m2: 1.25rem;
    --font-size-base: 1rem;
    --font-size-s: 0.7rem;
    /* color palette */
    --fg: #23221f;
    --bg: #fdfdfb;
    --header-block-size: 0px;
    --screen-without-nav: calc(100vh - var(--header-block-size));
}

/* utility typeface  classes - only use if absolutely needed! */
/* font-size */
.font-size\:xl {
    font-size: var(--font-size-xl) !important;
}
.font-size\:l {
    font-size: var(--font-size-l) !important;
    line-height: 1.2;
}
.font-size\:m {
    font-size: var(--font-size-m) !important;
    line-height: 1.2;
}
.font-size\:m2 {
    font-size: var(--font-size-m2) !important;
}
.font-size\:base {
    font-size: var(--font-size-base) !important;
}
.font-size\:s {
    font-size: var(--font-size-s) !important;
}
.font-size\:variable {
    font-size: clamp(var(--font-size-l), 3vw, var(--font-size-xl));
    line-height: 1.05;
}
.font-size\:variable-xl {
    font-size: clamp(var(--font-size-xl), 5vw, 40rem);
    line-height: 1;
}
/* text-align */
.text-align\:center {
    text-align: center !important;
}
.typeface\:freight {
    font-family: "FreightDisp Pro Light", 'Times New Roman', Times, serif;
    font-weight: 400 !important;
}
.typeface\:untitled {
    font-family: "Untitled Sans", Helvetica, Arial, sans-serif;
    font-weight: 400 !important;
}
.typeface\:freight-italics {
    font-family: "FreightDisp Pro Light", 'Times New Roman', Times, serif;
    font-weight: 400 !important;
    font-style: italic !important;
}
/* line-height */
.line-height\:tight, .line-height\:tight * {
    line-height: 1.2 !important;
}
/* cap */
.cap\:true {
    text-transform: uppercase;
}

/* element type styling */
h1, h2, h3, h4, h5, h6 {
    font-family: "FreightDisp Pro Light", 'Times New Roman', Times, serif;
    font-weight: 400;
    line-height: 1.2;
}
h1 {
    font-size: var(--font-size-l);
}
h2 {
    font-size: var(--font-size-m);
}
h3 {
    font-size: var(--font-size-m);
}
p {
    line-height: 1.4;
    letter-spacing: -0.03em;
}
a {
    text-decoration: none;
}
ul {
    list-style: none;
    padding: 0;
}
hr {
    border: none;
    border-top: 0.25px solid;
}

/* global color */
html, body {
    background-color: var(--bg);
}
* {
    color: var(--fg);
    scroll-margin-block-start: var(--header-block-size, 0);
}

/* main layouts */
/* global variables + config */
:root {
    --ratio: 1.5;
    --gap: 1.5rem;
    --gap-2: calc(var(--gap) * var(--ratio));
    --gap-3: calc(var(--gap-2) * var(--ratio));
    --gap-4: calc(var(--gap-3) * var(--ratio));
    --gap-s1: calc(var(--gap) / var(--ratio));
}
* {
    box-sizing: border-box;
    /* overriding browser's styling */
    margin: 0;
}
body {
    margin-inline: min(2vw, var(--gap));
}
img, video {
    inline-size: 100%;
    block-size: 100%;
}
/* stack */
.stack {
    display: flex;
    flex-direction: column;
}
.stack > *:not(script) + *:not(script) {
    margin-block-start: var(--space);
}
.stack-size\:large {
    --space: var(--gap-3);
}
.stack-size\:smol {
    --space: var(--gap-s1);
}
.stack-size\:med {
    --space: var(--gap);
}

/* cover */
.cover {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    min-block-size: 100vh;
}
.cover > :first-child {
    margin-block-start: 0;
}
.cover > :last-child {
    margin-block-end: 0;
}
/* cluster */
.cluster {
    display: flex;
    flex-direction: row;
    gap: 0 var(--gap);
    justify-content: space-between;
    align-items: baseline;
}
/* center - 2 variants*/
/* to be used with other layouts */
.center\:variable-width {
    --inline-size: 165ch;
    width: 100%;
    box-sizing: content-box;
    max-width: min(100%, var(--inline-size));
    margin-inline: auto;
}
.center\:fixed-width {
    --inline-size: 75ch;
    box-sizing: content-box;
    display: flex;
    align-items: center;
    max-width: min(100%, var(--inline-size));
    margin-inline: auto;
}
/* grid - 3 columns */
.grid {
    --size: 30%;
    display: grid;
    grid-gap: 3rem var(--gap);
    grid-template-columns: repeat(auto-fit, minmax(clamp(20rem, calc(var(--size) + var(--gap)), 100%), 1fr));
}
/* grid, non collapsible */
.columns {
    display: grid;
    grid-template-columns: 1fr 1fr;
    width: 100%;
}
/* switcher */
.switcher {
    --switch: 60ch;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 0 var(--gap-4);
}
.switcher > * {
    flex-grow: 1;
    flex-basis: calc((var(--switch) - 100%) * 999);
}

/* sticky */
.sticky {
    height: auto;
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
}
.sticky > * {
    --sticky: 2vh;
    position: sticky;
    top: calc(var(--sticky) + var(--header-block-size));
}
/* ... */

